# home

./: .gitignore  DEPENDABOT_SETUP.md  Makefile  PLAN-CANARY-AB.md  PLAN-SECURITY.md  README.md  replacements.txt
.github/: README.md  dependabot.yml
.github/workflows/: README.md  agent-images.yml  dependabot-self-hosted.yml  dependabot.yml  homelab-images.yml  homepage-images.yml  image-security.yml  self-hosted-example.yml  setup-self-hosted-runners.yml
flux/clusters/_studio/: kind.yaml
flux/clusters/_studio/infrastructure/: kustomization.yaml
flux/clusters/_studio/infrastructure/alloy/: helmrelease.yaml  namespace.yaml
flux/clusters/_studio/infrastructure/falco/: kustomization.yaml
flux/clusters/_studio/infrastructure/falcosidekick/: helmrelease.yaml  kustomization.yaml  namespace.yaml  values.yaml
flux/clusters/homelab/: kind.yaml  kustomization.yaml
flux/clusters/homelab/infrastructure/: kustomization.yaml
flux/clusters/homelab/infrastructure/agent-sre/: .coverage  .dockerignore  Dockerfile  Makefile  configmap.yaml  coverage.xml  deployment.yaml  job.yaml  k8s-all.yaml  kustomization.yaml  main.py  mcp_config.json  mcp_simple_server.py  namespace.yaml  pyproject.toml  requirements.txt  sealed-secret.yaml  service.yaml  test-fastapi.py  test.py
flux/clusters/studio/: kind.yaml  kustomization.yaml
flux/clusters/studio/flux-system/: gotk-sync.yaml
flux/clusters/studio/infrastructure/: kustomization.yaml
flux/clusters/studio/infrastructure/jamie-sre-chatbot/: LOGFIRE_INSTRUMENTATION.md  README.md  kustomization.yaml  pyproject.toml  requirements-analysis.json  setup-logfire.sh
flux/clusters/studio/infrastructure/jamie-sre-chatbot/k8s/: deployment.yaml  grafana-dashboard.yaml  helmrelease.yaml  kustomization.yaml  secrets.yaml  servicemonitor.yaml  setup-secrets.sh
flux/clusters/studio/infrastructure/jamie-sre-chatbot/src/: app.py  requirements.txt
flux/clusters/studio/infrastructure/jamie-sre-chatbot/sre-model-ollama/: Modelfile
flux/clusters/studio/tenants/: bruno-site.yaml  kustomization.yaml
pulumi/: Pulumi.yaml  go.mod  go.sum  main.go
scripts/: install-linkerd-viz.sh  install-linkerd.sh  setup-registry.sh  setup-runner.sh  update-tunnel.py
(+380 files in other folders)
