[project]
name = "sre-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.117.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-ollama>=0.2.0",
    "langsmith[otel]>=0.4.31",
    "logfire[fastapi]>=4.10.0",
    "opentelemetry-api>=1.37.0",
    "uvicorn>=0.37.0",
]
