[project]
name = "sre-agent"
version = "0.1.0"
description = "🚀 Optimized SRE Agent for Kubernetes monitoring"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # 🚀 Core FastAPI stack (optimized versions)
    "fastapi==0.117.1",
    "uvicorn==0.37.0",
    
    # 🤖 LangChain stack (minimal required)
    "langchain==0.3.27",
    "langchain-community==0.3.30",
    "langchain-ollama==0.2.0",
    
    # 📊 Monitoring and observability (essential only)
    "logfire[fastapi]==4.10.0",
    "langsmith[otel]==0.4.31",
    "opentelemetry-api==1.37.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "flake8==7.1.1",
]
