[project]
name = "jamie-sre-chatbot"
version = "1.0.0"
description = "Jamie SRE Chatbot - AI-powered Slack bot for SRE assistance"
authors = [
    {name = "Bruno Lucena", email = "bruno@lucena.cloud"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "slack-bolt>=1.18.1",
    "slack-sdk>=3.26.1",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "flask>=3.0.0",
    "structlog>=23.2.0",
    "logfire>=0.30.0",
    "aiohttp>=3.9.1",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.11.0",
    "flake8>=6.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.11.0",
    "flake8>=6.1.0",
]
